--- a/index.Rmd
+++ b/index.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Causal Inference in Education"
-book_filename: "causal inference"
 author: "Anthony Schmidt"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 site: bookdown::bookdown_site
 documentclass: book
 output:
   bookdown::gitbook:
+    number_sections: false
     config:
       toc:
         toc_depth: 5
