updated week 3, week 4

--- a/01-randomized-experiments.Rmd
+++ b/01-randomized-experiments.Rmd
@@ -1,11 +1,6 @@
-# Week 2 - Randomized Experiments
+# 1. Randomized Experiments (Week 2)
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-
-## New York Scholarship Program
+**New York Scholarship Program**
 
 The following example comes from  Murnane and Willett (2010), chapter 4. The data was originally downloaded from the [UCLA Institute for Digital Research and Education](https://stats.idre.ucla.edu/stata/examples/methods-matter/chapter4/).
 
@@ -19,7 +14,6 @@ The data examines a subset of African-American students from the 1997 New York S
   * pre_ach: reading achievement score before getting a voucher
   * post_ach: reading achivemenet score at year 3
   
-### Setup
 
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
@@ -68,7 +62,7 @@ apa <- function(x) {
 
 ```
 
-### Descriptive Statistics
+## Descriptive Statistics
 
 ```{r, descriptives}
 describe(nysp_vouchers) %>%
@@ -116,7 +110,7 @@ rbind(desc, diff_data) %>%
 ```
 
 
-### T-Test
+## T-Test
 
 (Strategy 1, Table 4.1, pg. 49)
 
@@ -131,7 +125,7 @@ broom::tidy(mm4_t) %>%
   apa()
 ```
 
-### Simple Linear Regression 
+## Simple Linear Regression 
 
 (Strategy 2, Table 4.1, pg 49)
 
@@ -143,14 +137,14 @@ apa.reg.table(mm4_model1)[[3]] %>%
   apa()
 ```
 
-#### Output for variances 
+### Output for variances 
 
 ```{r}
 apa.aov.table(mm4_model1)[[3]] %>% 
   apa()
 ```
 
-### Multiple Linear Regression 
+## Multiple Linear Regression 
 
 (Strategy 3, Table 4.1, pg 49)
 
@@ -159,7 +153,7 @@ mm4_model2 <- lm(post_ach ~ voucher + pre_ach, data = nysp_vouchers)
 apa.reg.table(mm4_model2)[[3]] %>% apa()
 ```
 
-#### Output for variances 
+### Output for variances 
 
 ```{r}
 apa.aov.table(mm4_model2)[[3]] %>% apa()
